# codeartifact-shield

./: .gitignore  PLAN-multiformat.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/codeartifact_shield/: __init__.py  __main__.py  _allowlist.py  _http.py  _lockfile.py  _output.py  _registry.py  audit.py  cli.py  cooldown.py  drift.py  pins.py  registry.py  scripts.py  sri.py  trust.py
src/codeartifact_shield/lockfiles/: __init__.py  _jsonc.py  _model.py  _yaml_safe.py  bun.py  deno.py  npm.py  pnpm.py
tests/: test_allowlist.py  test_audit.py  test_bun_gates.py  test_bun_lockfile.py  test_cli.py  test_cooldown.py  test_deno_gates.py  test_deno_lockfile.py  test_drift.py  test_http_retry.py  test_jsonc.py  test_lockfile_detect.py  test_lockfile_validation.py  test_lockfiles_model.py  test_npm_workspaces.py  test_pins.py  test_pnpm_gates.py  test_pnpm_lockfile.py  test_registry.py  test_scripts.py  test_sri.py  test_trust.py
tests/fixtures/: sample-package-lock.json  undici-7.10.0-provenance-bundle.json
tests/fixtures/deno/: deno.json  lock-tampered.json  lock-v3.json  lock-v4.json  lock-v5.json
tests/fixtures/npm/: is-array.json
tests/fixtures/osv/: auditjs-sample.json  batch-lodash-axios-react.json  vuln-GHSA-35jh-r3h4-6jhm.json  vuln-GHSA-cph5-m8f7-6c5x.json  vuln-GHSA-jf85-cpcp-j695.json
tests/fixtures/pnpm/: lock-alias-bomb.yaml  lock-tampered-traversal.yaml  lock-v5-old.yaml  lock-v6-basic.yaml  lock-v9-basic.yaml  lock-v9-workspace.yaml  pnpm-workspace.yaml
